--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <!-- page 4 end -->
 
         <!-- page 5 start -->
-        <div class="page5 cursor-none w-full h-screen bg-[#0f0d0e] text-[#efeff1] md:py-[8vw] py-0 md:px-[5vw] px-[5vw]">
+        <div class="page5 cursor-none w-full h-screen bg-[#0f0d0e] text-[#efeff1] md:py-[8vw] py-[15vw] md:px-[5vw] px-[5vw]">
           <div class="flex items-center justify-between w-full px-3 mb-3">
               <div class="group relative md:h-fit w-fit leading-none cursor-pointer overflow-hidden">
                       <div class="flex gap-3 uppercase md:text-[3.5vw] text-[6vw]">
